# slide-forge

./: .gitignore  pyproject.toml
.claude-plugin/: marketplace.json
agents/: slide-assayer.md  slide-gauge.md
commands/: create.md  edit.md
plugins/slide-forge/.claude-plugin/: plugin.json
plugins/slide-forge/agents/: slide-assayer.md  slide-crucible.md  slide-gauge.md  slide-smith.md  slide-storyteller.md  slide-wanderer.md
plugins/slide-forge/commands/: create.md  forge.md  reforge.md
plugins/slide-forge/references/: narrative-format.md  phase1-examples.md  rules.md  style-guide.md
plugins/slide-forge/skills/slide-anvil/: SKILL.md  editing.md  pptxgenjs.md  slide-forge-api.md
plugins/slide-forge/skills/slide-anvil/references/: phase1-examples.md  rules.md  style-guide.md
plugins/slide-forge/skills/slide-foundry/: SKILL.md
skills/slide-anvil/: SKILL.md  editing.md
skills/slide-anvil-critic/: SKILL.md
skills/slide-anvil/references/: phase1-examples.md  style-guide.md
skills/slide-anvil/scripts/: render_slides.py
skills/slide-anvil/scripts/office/: pack.py
skills/slide-foundry/: SKILL.md
src/slide_forge/: __init__.py
src/slide_forge/cli/: __init__.py  add_slide.py  bump_version.py  clean.py  pack.py  render.py  soffice.py  thumbnail.py  unpack.py  validate.py
src/slide_forge/cli/schemas/ISO-IEC29500-4_2016/: xml.xsd
src/slide_forge/cli/validators/: __init__.py  base.py  pptx.py
src/slide_forge/default/: __init__.py  slide.py  template.pptx
tests/: demo_visual_area.py  test_default_content_slide.py  test_visual_area.py
(+5 files in other folders)
