[project]
name = "slide-forge"
version = "1.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "defusedxml>=0.7.1",
    "lxml>=6.0.2",
    "lxml-stubs>=0.5.1",
    "python-pptx>=1.0.2",
]

[project.scripts]
slide-forge = "slide_forge.cli:main"

[dependency-groups]
dev = [
    "iruff>=0.1.0",
    "pyright>=1.1.408",
    "ruff>=0.15.2",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.pyright]
typeCheckingMode = "standard"

[tool.ruff]
line-length = 120
